Footer javítás -> mindig az oldal legalján marad

--- a/vizsgaremek_palyakovetes/frontend/src/css/Footer.css
+++ b/vizsgaremek_palyakovetes/frontend/src/css/Footer.css
@@ -1,3 +1,14 @@
 .footerContent {
     text-align: center;
+   
+    padding: 20px;
+    
+}
+
+.footer {
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
+
 }
