--- a/vizsgaremek_palyakovetes/frontend/src/css/index.css
+++ b/vizsgaremek_palyakovetes/frontend/src/css/index.css
@@ -1,5 +1,7 @@
 body {
-  
+  position: relative;
+  min-height: 100vh;
+  padding-bottom:100px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
