--- a/vizsgaremek_palyakovetes/frontend/src/css/App.css
+++ b/vizsgaremek_palyakovetes/frontend/src/css/App.css
@@ -17,9 +17,7 @@ input[type="file"] {
 }
 
 .formstest * {
-
-  margin: 0.75rem 0rem
-
+  margin: 0.75rem 0rem;
 }
 
 ::-webkit-scrollbar {
@@ -27,15 +25,15 @@ input[type="file"] {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
 
 .backToHomePageButton {
