--- a/vizsgaremek_palyakovetes/frontend/src/css/App.css
+++ b/vizsgaremek_palyakovetes/frontend/src/css/App.css
@@ -16,10 +16,6 @@ input[type="file"] {
   cursor: pointer;
 }
 
-.formstest * {
-  margin: 0.75rem 0rem;
-}
-
 ::-webkit-scrollbar {
   width: 16px;
 }
@@ -74,4 +70,73 @@ input[type="file"] {
 .backToHomePageButton:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .wrapper {
+    padding: 1rem 2rem;
+  }
+  .school-class-text {
+    text-align: center;
+  }
+  .add-new-student-text {
+    text-align: center;
+  }
+  .formMain {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .form2 {
+    display: grid;
+    order: 0;
+    width: 80%;
+  }
+  .form1 {
+    order: 1;
+    margin-right: 0rem;
+    display: grid;
+    width: 80%;
+  }
+  .form1 * {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  .form2 * {
+    margin-bottom: 1rem;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .wrapper {
+    padding: 3rem 6rem;
+  }
+  .formMain {
+    display: flex;
+  }
+  .form1 {
+    margin-right: 1rem;
+    display: grid;
+    width: 35%;
+  }
+  .form2 {
+    display: grid;
+    width: 35%;
+  }
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 80%;
+  margin: 0 auto;
+}
+
+td,
+th {
+  border: 3px solid grey;
+  text-align: left;
+  padding: 1px;
 }
